--- a/less/landing-header.less
+++ b/less/landing-header.less
@@ -76,6 +76,7 @@ header {
             h1 {
                 padding-top: 1%;
                 font-size: 3rem;
+                margin-bottom: -2.5%;
             }
 
             p {
